--- a/ro/calendar/chrome/calendar/calendar-alarms.properties
+++ b/ro/calendar/chrome/calendar/calendar-alarms.properties
@@ -56,5 +56,13 @@ reminderCustomOriginBeginAfterTask=după începerea sarcinii
 reminderCustomOriginEndBeforeTask=înainte de a se încheia sarcina
 reminderCustomOriginEndAfterTask=după încheierea sarcinii
 
-reminderErrorMaxCountReachedEventN=Calendarul selectat are o limitare de #1 memento per eveniment.;Calendarul selectat are o limitare de #1 memento-uri per eveniment.
-reminderErrorMaxCountReachedTaskN=Calendarul selectat are o limitare de #1 memento per sarcină.;Calendarul selectat are o limitare de #1 memento-uri per sarcină.
+# Sorry about this, but the reminder dialog possibly needs to support changing the
+# order of its elements for some locales. This needs to be done in a different
+# bug. Please comment in bug XXX what your needs are.
+reminderDialogOriginBeginEvent=începerea evenimentului
+reminderDialogOriginEndEvent=încheierea evenimentului
+reminderDialogOriginBeginTask=începerea sarcinii
+reminderDialogOriginEndTask=încheierea sarcinii
+
+reminderErrorMaxCountReachedEvent=Calendarul selectat are o limitare de #1 memento per eveniment.;Calendarul selectat are o limitare de #1 memento-uri per eveniment.
+reminderErrorMaxCountReachedTask=Calendarul selectat are o limitare de #1 memento per sarcină.;Calendarul selectat are o limitare de #1 memento-uri per sarcină.
