--- a/ro/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/ro/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -219,19 +219,19 @@
 12575=A intervenit o eroare în timpul trimiterii mesajului. Serverul a răspuns: %1$s. Vă rugăm să verificați destinatarul %2$s și să încercați din nou.
 
 ## @name NS_ERROR_COULD_NOT_LOGIN_TO_SMTP_SERVER_INSECAUTH
-12579=An error occurred sending mail: Unable to authenticate to SMTP server %S. The server does not support any compatible insecure authentication mechanism but you have chosen insecure authentication. Try switching on secure authentication or contact your service provider.
+12579=A apărut o eroare la trimiterea mesajului: nu s-a putut face autentificarea cu serverul SMTP %S. Serverul nu suportă niciun mecanism de autentificare nesecurizată, dar dumneavoastră ați ales autentificarea nesecurizată. Încercați să schimbați pe autentificare securizată sau contactați furnizorul serviciului.
 
 ## @name NS_ERROR_COULD_NOT_LOGIN_TO_SMTP_SERVER_SECAUTH
-12580=An error occurred sending mail: Unable to authenticate to SMTP server %S. The server does not support any compatible secure authentication mechanism but you have chosen secure authentication. Try switching off secure authentication or contact your service provider.
+12580=A apărut o eroare la trimiterea mesajului: nu s-a putut face autentificarea cu serverul SMTP %S. Serverul nu suportă niciun mecanism compatibil de autentificare securizată, dar dumneavoastră ați ales autentificarea securizată. Încercați să schimbați în autentificare nesecurizată sau contactați furnizorul serviciului.
 
 ## @name NS_ERROR_COULD_NOT_LOGIN_TO_SMTP_SERVER_AUTH_NONE
-12581=An error occurred sending mail: Unable to authenticate to SMTP server %S. It does not support authentication (SMTP-AUTH) but you have chosen to use authentication. Uncheck 'Use name and password' for that server or contact your service provider.
+12581=A apărut o eroare la trimiterea mesajului: nu se poate face autentificarea cu serverul SMTP %S. Nu suportă autentificare (SMTP-AUTH) dar dumneavoastră ați ales să folosiți autentificare. Debifați „Folosește nume și parolă” pentru acest server sau contactați furnizorul serviciului.
 
 ## @name NS_ERROR_STARTTLS_FAILED_EHLO_STARTTLS
-12582=An error occurred sending mail: Unable to establish a secure link with SMTP server %S using STARTTLS since it doesn't advertise that feature. Switch off STARTTLS for that server or contact your service provider.
+12582=A intervenit o eroare la trimiterea mesajului: Nu se poate stabili o conexiune sigură cu serverul SMTP %S folosind STARTTLS pentru că serverul nu pare să suporte acest serviciu. Dezactivați STARTTLS pentru acest server sau contactați furnizorul serviciului.
 
 ## @name NS_ERROR_COULD_NOT_LOGIN_TO_SMTP_SERVER
-12583=An error occurred sending mail: Unable to log in to SMTP server %S. The server may be incorrectly configured. Please verify that your SMTP server settings are correct and try again.
+12583=A intervenit o eroare la trimiterea mesajului: nu se poate face autentificarea cu serverul SMTP %S. Serverul pare configurat incorect. Vă rugăm să vă asigurați că setările serverului SMTP sunt corecte și încercați din nou.
 
 ## @name NS_ERROR_SMTP_PASSWORD_UNDEFINED
 12584=A apărut o eroare la trimiterea mesajului: nu s-a putut obține parola pentru %S. Mesajul nu a fost trimis.
@@ -240,28 +240,28 @@
 12585=E necesară parola pentru serverul SMTP
 
 ## @name NS_ERROR_SMTP_TEMP_SIZE_EXCEEDED
-12586=The size of the message you are trying to send exceeds a temporary size limit of the server. The message was not sent; try to reduce the message size or wait some time and try again. The server responded:  %s.
+12586=Mărimea mesajului pe care încercați să-l trimiteți depășește limita temporară de mărime a serverului. Mesajul nu a fost trimis; încercați să reduceți mărimea mesajului sau așteptați un timp după care încercați din nou. Răspunsul serverului este: %s.
 
 ## @name NS_ERROR_SMTP_PERM_SIZE_EXCEEDED_1
-12587=The size of the message you are trying to send exceeds the global size limit (%d bytes) of the server. The message was not sent; reduce the message size and try again.
+12587=Mărimea mesajului pe care încercați să-l trimiteți depășește limita globală de mărime a serverului (%d octeți). Mesajul nu a fost trimis; reduceți mărimea acestuia și încercați din nou.
 
 ## @name NS_ERROR_SMTP_PERM_SIZE_EXCEEDED_2
 12588=Dimensiunea mesajului pe care încercați să-l trimiteți depășește dimensiunea standard acceptată de server. Mesajul nu a fost trimis; reduceți mesajul și încercați din nou. Răspunsul serverului: %s.
 
 ## @name NS_ERROR_SMTP_SEND_FAILED_UNKNOWN_SERVER
-12589=An error occurred sending mail: SMTP server %S is unknown. The server may be incorrectly configured. Please verify that your SMTP server settings are correct and try again.
+12589=A intervenit o eroare la trimiterea mesajului: nu se cunoaște serverul SMTP %S. Ar putea fi o problemă de configurare a serverului. Vă rugăm să vă asigurați că setările serverului SMTP sunt corecte și încercați din nou.
 
 ## @name NS_ERROR_SMTP_SEND_FAILED_REFUSED
-12590=The message could not be sent because connecting to SMTP server %S failed. The server may be unavailable or is refusing SMTP connections. Please verify that your SMTP server settings are correct and try again, or contact the server administrator.
+12590=Mesajul nu a putut fi trimis pentru că conectarea la serverul SMTP %S a eșuat. Serverul ar putea fi indisponibil sau refuză conexiuni SMTP. Vă rugăm să verificați că setările serverului SMTP sunt corecte și încercați din nou sau contactați administratorul serverului.
 
 ## @name NS_ERROR_SMTP_SEND_FAILED_INTERRUPTED
-12591=The message could not be sent because the connection to SMTP server %S was lost in the middle of the transaction. Try again or contact your network administrator.
+12591=Mesajul nu a putut fi trimis pentru că conexiunea la serverul SMTP %S s-a pierdut în mijlocul tranzacției. Încercați din nou sau contactați administratorul de rețea.
 
 ## @name NS_ERROR_SMTP_SEND_FAILED_TIMEOUT
-12592=The message could not be sent because the connection to SMTP server %S timed out. Try again or contact your network administrator.
+12592=Mesajul nu a putut fi trimis pentru că conectarea la serverul SMTP %S a expirat. Încercați din nou sau contactați administratorul de rețea.
 
 ## @name NS_ERROR_SMTP_SEND_FAILED_UNKNOWN_REASON
-12593=The message could not be sent using SMTP server %S for an unknown reason. Please verify that your SMTP server settings are correct and try again, or contact your network administrator.
+12593=Mesajul nu a putut fi trimis folosind serverul SMTP %S dintr-un motiv necunoscut. Vă rugăm să verificați corectitudinea setărilor serverului SMTP și să încercați din nou sau să contactați administratorul de rețea.
 
 ## Strings use for the save message dialog shown when the user close a message compose window
 saveDlogTitle=Salvare mesaj
