--- a/pl/calendar/chrome/calendar/timezones.properties
+++ b/pl/calendar/chrome/calendar/timezones.properties
@@ -277,7 +277,7 @@ pref.timezone.Asia.Kabul=Azja/Kabul
 pref.timezone.Asia.Kamchatka=Azja/Kamczatka
 pref.timezone.Asia.Karachi=Azja/Karachi
 pref.timezone.Asia.Kashgar=Azja/Kashgar
-pref.timezone.Asia.Katmandu=Azja/Katmandu
+pref.timezone.Asia.Kathmandu=Azja/Katmandu
 pref.timezone.Asia.Krasnoyarsk=Azja/Krasnojarsk
 pref.timezone.Asia.Kuala_Lumpur=Azja/Kuala Lumpur
 pref.timezone.Asia.Kuching=Azja/Kuching
