--- a/pl/mail/chrome/messenger/importMsgs.properties
+++ b/pl/mail/chrome/messenger/importMsgs.properties
@@ -87,6 +87,7 @@
 2133=Informacja 3
 2134=Informacja 4
 2135=Notatki
+2136=Komunikator AIM
 
 # Error strings
 ImportAlreadyInProgress = Trwa importowanie danych. Spróbuj ponownie, kiedy bieżąca operacja zakończy się.
