--- a/nb-NO/mail/chrome/messenger/messenger.properties
+++ b/nb-NO/mail/chrome/messenger/messenger.properties
@@ -121,23 +121,23 @@ messageCollapsed=Sammenslått
 
 # Used in the SMTP Account Settings panel when a server value has no properties
 smtpServerList-NotSpecified=<ikke oppgitt>
-smtpServer-SecureConnection-Type_0=Nei
-smtpServer-SecureConnection-Type_1=STARTTLS, dersom tilgjengelig
-smtpServer-SecureConnection-Type_2=STARTTLS
-smtpServer-SecureConnection-Type_3=SMTP-over-SSL
+smtpServer-ConnectionSecurityType-0=Ingen
+smtpServer-ConnectionSecurityType-1=STARTTLS, dersom tilgjengelig
+smtpServer-ConnectionSecurityType-2=STARTTLS
+smtpServer-ConnectionSecurityType-3=SSL/TLS
 smtpServer-SecureAuthentication-Type-false=Nei
 smtpServer-SecureAuthentication-Type-true=Ja
 smtpServers-confirmServerDeletionTitle=Slett tjener
 smtpServers-confirmServerDeletion=Er du sikker på at du vil slette tjeneren: \n %S?
 
-# LOCALIZATION NOTES(serverType-nntp): Do not translate "NNTP" in the line below
+# LOCALIZATION NOTE(serverType-nntp): Do not translate "NNTP" in the line below
 serverType-nntp=Nyhetsgruppetjener (NNTP)
-# LOCALIZATION NOTES(serverType-pop3): Do not translate "POP" in the line below
+# LOCALIZATION NOTE(serverType-pop3): Do not translate "POP" in the line below
 serverType-pop3=POP e-posttjener
-# LOCALIZATION NOTES(serverType-imap): Do not translate "IMAP" in the line below
+# LOCALIZATION NOTE(serverType-imap): Do not translate "IMAP" in the line below
 serverType-imap=IMAP e-posttjener
 serverType-none=Lokalt e-postlager
-# LOCALIZATION NOTES(serverType-movemail): DONT_TRANSLATE
+# LOCALIZATION NOTE(serverType-movemail): DONT_TRANSLATE
 serverType-movemail=Unix Movemail
 
 sizeColumnTooltip=Trykk her for å sortere etter størrelse
