--- a/nb-NO/calendar/chrome/calendar/calendar-event-dialog.properties
+++ b/nb-NO/calendar/chrome/calendar/calendar-event-dialog.properties
@@ -37,36 +37,68 @@
 #
 # ***** END LICENSE BLOCK *****
 
-repeatDetailsRuleDaily1=hver dag
-repeatDetailsRuleDaily2=annenhver dag
-repeatDetailsRuleDaily3=hver %1$S dager
+# LOCALIZATION NOTE (dailyEveryNth):
+# Edit recurrence window -> Recurrence pattern -> Daily repeat rules
+# #1 - number
+# e.g. "every 4 days"
+dailyEveryNth=hver dag;hver #1. dag
 repeatDetailsRuleDaily4=hver ukedag
 
-repeatDetailsRuleWeekly1=hver %1$S
-repeatDetailsRuleWeekly2=annenhver uke på %1$S
-repeatDetailsRuleWeekly3=%1$S.hver uke på %2$S
-repeatDetailsRuleWeekly4=hver uke
-repeatDetailsRuleWeekly5=annenhver uke
-repeatDetailsRuleWeekly6=hver %1$S uker
+# LOCALIZATION NOTE (weeklyNthOn)
+# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
+# %1$S - weekday (one or more)
+# #2 - week interval
+# e.g. "every 3 weeks on Tuesday, Wednesday and Thursday
+weeklyNthOn=hver %1$S;hver #2. uke på %1$S
 
-repeatDetailsDay1=søndag
-repeatDetailsDay2=mandag
-repeatDetailsDay3=tirsdag
-repeatDetailsDay4=onsdag
-repeatDetailsDay5=torsdag
-repeatDetailsDay6=fredag
-repeatDetailsDay7=lørdag
+# LOCALIZATION NOTE (weeklyNthOn)
+# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
+# #1 - interval
+# e.g. "every 5 weeks"
+weeklyEveryNth=hver uke;hver #1. uke
+
+repeatDetailsDay1=Søndag
+repeatDetailsDay2=Mandag
+repeatDetailsDay3=Tirsdag
+repeatDetailsDay4=Onsdag
+repeatDetailsDay5=Torsdag
+repeatDetailsDay6=Fredag
+repeatDetailsDay7=Lørdag
+
+# LOCALIZATION NOTE (repeatDetailsAnd)
+# Used to show a number of weekdays in a list
+# i.e. "Sunday, Monday, Tuesday " + and + " Wednesday"
 repeatDetailsAnd=og
 
-repeatDetailsRuleMonthly=den %1$S %2$S hver måned
-repeatDetailsRuleMonthly2=den %1$S %2$S hver andre måned
-repeatDetailsRuleMonthly3=den %1$S %2$S hver %3$S måned
-repeatDetailsRuleMonthly4=dag %1$S hver måned
-repeatDetailsRuleMonthly5=dag %1$S annenhver måned
-repeatDetailsRuleMonthly6=dag %1$S hver %2$S måned
-repeatDetailsRuleMonthly7=siste dagen i måneden
-repeatDetailsRuleMonthly8=siste dagen i annenhver måned
-repeatDetailsRuleMonthly9=siste dagen hver %1$S måned
+# LOCALIZATION NOTE (monthlyNthOfEvery):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# %1$S - ordinal
+# %2$S - weekday
+# #3 - interval
+# i.e. "the FIRST MONDAY of every 3 months"
+monthlyNthOfEvery=den %1$S %2$S i hver måned;den %1$S %2$S hver #3. måned
+
+# LOCALIZATION NOTE (monthlyEveryOfEvery):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# %1$S - weekday
+# #2 - interval
+# i.e. "every MONDAY of every 3 months" 
+#  more specific: every monday of January, April, July, October
+monthlyEveryOfEvery=hver %1$S i hver måned;hver %1$S hver #2. måned
+
+# LOCALIZATION NOTE (monthlyDayOfNth):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# %1$S - day of month
+# #2 - month interval
+# e.g. "day 3 of every 2 months"
+monthlyDayOfNth=dag %1$S i hver måned;dag %1$S i hver #2. måned
+
+# LOCALIZATION NOTE (monthlyLastDayOfNth):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# %1$S - day of month
+# #2 - month interval
+# e.g. "the last day of every 3 months"
+monthlyLastDayOfNth=den siste dagen i måneden; den siste dagen hver #1 måned
 
 repeatDetailsOrdinal1=første
 repeatDetailsOrdinal2=andre
@@ -75,12 +107,32 @@ repeatDetailsOrdinal4=fjerde
 repeatDetailsOrdinal5=femte
 repeatDetailsOrdinal-1=siste
 
-repeatDetailsRuleYearly1=hver %2$S. %1$S
-repeatDetailsRuleYearly2=hvert andre år på %2$S. %1$S
-repeatDetailsRuleYearly3=hvert %3$S år på %2$S. %1$S
-repeatDetailsRuleYearly4=det %1$S %2$S på %3$S
-repeatDetailsRuleYearly5=hvert andre år den %1$S %2$S %3$S
-repeatDetailsRuleYearly6=hvert %4$S år den %1$S %2$S %3$S
+# LOCALIZATION NOTE (yearlyNthOn):
+# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
+# %1$S - month
+# %2$S - day of month
+# #3 - yearly interval
+# e.g. "every 3 years on December 14"
+yearlyNthOn=hver %1$S %2$S;hver #3. år på %1$S %2$S
+
+# LOCALIZATION NOTE (yearlyNthOnNthOf):
+# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
+# %1$S - ordinal
+# %2$S - weekday
+# %3$S - month
+# #4 - number
+# e.g. "the second Monday of every March"
+# e.g  "every 3 years the second Monday of March"
+yearlyNthOnNthOf=den %1$S %2$S i hver %3$S;hver #4 år på %1$S %2$S i %3$S
+
+# LOCALIZATION NOTE (yearlyNthOfNth):
+# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
+# %1$S - weekday
+# %2$S - month
+# #3 - number
+# e.g. "every Thursday of March"
+# e.g  "every 3 years on every Thursday of March"
+yearlyOnEveryNthOfNth=hver %1$S av %2$S;hver #3 år på hver %1$S i %2$S
 
 repeatDetailsMonth1=januar
 repeatDetailsMonth2=februar
@@ -95,32 +147,80 @@ repeatDetailsMonth10=oktober
 repeatDetailsMonth11=november
 repeatDetailsMonth12=desember
 
-repeatDetailsCount=Inntreffer %1$S\nmed start %2$S, %3$S ganger\nfra %4$S til %5$S.
-repeatDetailsCountAllDay=Inntreffer %1$S\nmed start %2$S, %3$S ganger.
-repeatDetailsUntil=Inntreffer %1$S\nmed start %2$S, frem til %3$S\nfra %4$S til %5$S.
-repeatDetailsUntilAllDay=Inntreffer %1$S\nmed start %2$S, frem til %3$S.
-repeatDetailsInfinite=Inntreffer %1$S\nmed start %2$S\nfra %3$S til %4$S.
-repeatDetailsInfiniteAllDay=Inntreffer %1$S\nmed start %2$S.
+# LOCALIZATION NOTE (repeatCount):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# %3$S - event start time (e.g. hh:mm (PM/AM))
+# %4$S - event end time (e.g. hh:mm (PM/AM))
+# #5 - event occurence times: number
+# e.g. with repeatDetailsRuleMonthly3:
+# "Occurs the first Sunday of every 3 month
+#  only on 1/1/2009"
+#  from 5:00 PM to 6:00 PM"
+# "Occurs the first Sunday of every 3 month
+#  effective 1/1/2009 for 5 times
+#  from 5:00 PM to 6:00 PM"
+repeatCount=Inntreffer %1$S\nfra og med %2$S for #5 ganger\nfra %3$S til %4$S.;Inntreffer %1$S\nfra og med %2$S for #5 ganger\nfra %3$S til %4$S.
 
-reminderCustomTitle=%1$S %2$S %3$S %4$S
-reminderTitleAtStartEvent=Øyeblikket hendelsen starter
-reminderTitleAtStartTask=Øyeblikket oppgaven starter
-reminderTitleAtEndEvent=Øyeblikket hendelsen slutter
-reminderTitleAtEndTask=Øyeblikket oppgaven slutter
-reminderCustomUnitMinute=minutt
-reminderCustomUnitMinutes=minutter
-reminderCustomUnitHour=time
-reminderCustomUnitHours=timer
-reminderCustomUnitDay=dag
-reminderCustomUnitDays=dager
-reminderCustomRelationBefore=før
-reminderCustomRelationAfter=etter
-reminderCustomOriginBeginEvent=hendelsen starter
-reminderCustomOriginEndEvent=hendelsen slutter
-reminderCustomOriginBeginTask=oppgaven starter
-reminderCustomOriginEndTask=oppgaven slutter
-reminderErrorMaxCountReachedEvent=Den valgte kalenderen er begrenset til %1$S påminnelser per hendelse.
-reminderErrorMaxCountReachedTask=Den valgte kalenderen er begrenset til %1$S påminnelser per oppgave.
+# LOCALIZATION NOTE (repeatCountAllDay):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# #3 - event occurence times: number
+# e.g. with repeatDetailsRuleMonthly3:
+# "Occurs the first Sunday of every 3 month
+#  only on 1/1/2009"
+# "Occurs the first Sunday of every 3 month
+#  effective 1/1/2009 for 5 times"
+repeatCountAllDay=Inntreffer %1$S\nfra og med %2$S for #3 gang.;Inntreffer %1$S\nfra og med %2$S for #3 ganger.
+
+# LOCALIZATION NOTE (repeatDetailsUntil):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# %3$S - event end date (e.g. mm/gg/yyyy)
+# %4$S - event start time (e.g. hh:mm (PM/AM))
+# %5$S - event end time (e.g. hh:mm (PM/AM))
+# e.g. with repeatDetailsRuleWeekly2:
+# "Occurs every other week on Sunday and Friday
+#  effective 1/1/2009 until 1/1/2010 
+#  from 5:00 PM to 6:00 PM"
+repeatDetailsUntil=Inntreffer %1$S\nfra og med %2$S inntil %3$S\nfra %4$S til %5$S.
+# LOCALIZATION NOTE (repeatDetailsUntilAllDay):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# %3$S - event end date (e.g. mm/gg/yyyy)
+# e.g. with repeatDetailsRuleMonthly6 and all day event:
+# "Occurs day 3 of every 5 month
+#  effective 1/1/2009 until 1/1/2010"
+repeatDetailsUntilAllDay=Inntreffer %1$S\nfra og med %2$S inntil %3$S.
+# LOCALIZATION NOTE (repeatDetailsInfinite):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# %3$S - event start time (e.g. hh:mm (PM/AM))
+# %4$S - event end time (e.g. hh:mm (PM/AM))
+# e.g. with repeatDetailsRuleMonthly6:
+# "Occurs day 3 of every 5 month
+#  effective 1/1/2009
+#  from 5:00 PM to 6:00 PM"
+repeatDetailsInfinite=Inntreffer %1$S\nfra og med %2$S\nfra %3$S til %4$S.
+# LOCALIZATION NOTE (repeatDetailsInfiniteAllDay):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# e.g. with repeatDetailsRuleMonthly6 and all day event:
+# "Occurs day 3 of every 5 month
+#  effective 1/1/2009"
+repeatDetailsInfiniteAllDay=Inntreffer %1$S\nfra og med %2$S.
+
+# LOCALIZATION NOTE (ruleTooComplex):
+# This string is shown in the reminder details area if our code can't handle the
+# complexity of the recurrence rule yet.
+ruleTooComplex=Trykk her for mer informasjon
+
 newEvent=Ny hendelse
 newTask=Ny oppgave
 
@@ -139,7 +239,7 @@ removeCalendarsText=Vil du virkelig fjerne %1$S vedlegg?
 
 # Recurrence Dialog Widget Order
 # LOCALIZATION NOTE: You can change the order of below params
-# Edit recurrence window -> Recurrence pattern -> Repeat montly
+# Edit recurrence window -> Recurrence pattern -> Repeat monthly
 # %1$S - ordinal, %2$S - weekday
 # e.g. "First Saturday"
 monthlyOrder=%1$S %2$S
